se modifico testimonio

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">creacion de paginas web</a></h4>
+              <h4 class="title"><a href="#" class="stretched-link">creacion de paginas web</a></h4>
               <p class="description">diseño y desarrollo de sitios web a medida, adaptados a las necesidades de tu negocio desde paginas informativas hasta platamorfas interativas y reponsivas </p>
             </div>
           </div>
@@ -557,7 +557,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">configuracion de servicio</a></h4>
+              <h4 class="title"><a href="#" class="stretched-link">configuracion de servicio</a></h4>
               <p class="description">implementacion y administracion de servidores en la nube o locales,con enfoque en la escabilidad,seguridad y respaldo de datos</p>
             </div>
           </div><!-- End Service Item -->
@@ -565,7 +565,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">integracion de sistema y Apis</a></h4>
+              <h4 class="title"><a href="#" class="stretched-link">integracion de sistema y Apis</a></h4>
               <p class="description">desarrollo soluciones personalizadas para un flujo de datos eficiente y seguro,optimizando procesos y mejorando la interoperabilidad entre sistemas</p>
             </div>
           </div><!-- End Service Item -->
@@ -573,7 +573,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">consultoria tecnica </a></h4>
+              <h4 class="title"><a href="#" class="stretched-link">consultoria tecnica </a></h4>
               <p class="description">asesoramiento sobre mejores practicas,tecnologias adecuadas,diseño de arquitectura escalable y revision de codigos para proyectos esistentes o nuevos</p>
             </div>
           </div><!-- End Service Item -->
@@ -581,7 +581,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">desarrollo de charbots IA</a></h4>
+              <h4 class="title"><a href="#" class="stretched-link">desarrollo de charbots IA</a></h4>
               <p class="description">Creaccion de sistemas inteligentes que procesen datos,automaticen decisiones o generen porediciones utiles para el negocio</p>
             </div>
           </div><!-- End Service Item -->
@@ -635,12 +635,13 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>"Trabajar con (jhon alejandro alzate rendon)  fue una experiencia increíble. Desarrolló una página web responsiva para nuestra institución educativa que no solo cumplió con nuestras expectativas, sino que las superó. Su atención al detalle y su capacidad para entender nuestras necesidades fueron clave para el éxito del proyecto. ¡Lo recomiendo ampliamente!"
+                    .</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Alejandra Rondón</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>juan lopez</h3>
+                <h4>institucion san peruchito</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -648,12 +649,13 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span> nos ayudó a implementar un chatbot basado en inteligencia artificial para nuestro sistema de atención al cliente. Su conocimiento en Python y tecnologías de IA como GPT-4 fue fundamental para crear una solución eficiente y escalable. ¡El chatbot ha mejorado significativamente nuestra interacción con los usuarios!"
+                    .</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>andres jimenes</h3>
+                <h4>cesde</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -661,12 +663,13 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>"Necesitábamos una base de datos robusta para gestionar la información de nuestros estudiantes. Jorge Iván no solo diseñó una solución personalizada con SQL, sino que también nos brindó asesoría técnica para optimizar su uso. Su profesionalismo y expertise son inigualables."
+                    .</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>jorge ivan grisales marin</h3>
+                <h4>institucion educativa cesde</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -674,12 +677,13 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>Contraté a (nombre)  para una consultoría técnica en uno de nuestros proyectos de desarrollo web. Su capacidad para identificar áreas de mejora y proponer soluciones innovadoras fue invaluable. Además, su enfoque en metodologías ágiles nos ayudó a optimizar nuestros procesos. ¡Un profesional excepcional!"
+                    .</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>edwin infante</h3>
+                <h4>direccion institucion educativ san peruchito</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -687,11 +691,13 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                  <span>"(nombre) fundamental en el desarrollo de la interfaz de usuario para nuestra plataforma web en la Institución Educativa San Peruchito. Su expertise en HTML, CSS y JavaScript nos permitió tener una aplicación web moderna, intuitiva y completamente responsiva. Además, su capacidad para entender las necesidades de nuestros usuarios y traducirlas en un diseño funcional fue excepcional. ¡Un profesional altamente recomendado para cualquier proyecto de desarrollo frontend!"
+
+                    .</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
+                <h3>giroplay sas</h3>
                 <h4>Entrepreneur</h4>
               </div>
             </div><!-- End testimonial item -->
@@ -753,22 +759,22 @@
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <label for="name-field" class="pb-2">Your Name</label>
+                  <label for="name-field" class="pb-2">tu nombre</label>
                   <input type="text" name="name" id="name-field" class="form-control" required="">
                 </div>
 
                 <div class="col-md-6">
-                  <label for="email-field" class="pb-2">Your Email</label>
+                  <label for="email-field" class="pb-2">tu email</label>
                   <input type="email" class="form-control" name="email" id="email-field" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <label for="subject-field" class="pb-2">Subject</label>
+                  <label for="subject-field" class="pb-2">Sujeto</label>
                   <input type="text" class="form-control" name="subject" id="subject-field" required="">
                 </div>
 
                 <div class="col-md-12">
-                  <label for="message-field" class="pb-2">Message</label>
+                  <label for="message-field" class="pb-2">Mensage</label>
                   <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
 
